[package]
name = "smtbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dotext = "0.1.1"
regex = "1.9.0"
inquire = "0.6.2"
rand = "0.8.0"
